feat(browser): Scaffold initial layout and theme

--- a/src/browser/index.dev.html
+++ b/src/browser/index.dev.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Project Template V1</title>
+    <title>The Simple Path to Bitcoin</title>
     <script type="module">
       import refreshRuntime from "http://localhost:8080/@react-refresh";
 
