--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Project Template V1</title>
+    <title>The Simple Path to Bitcoin</title>
   </head>
   <body>
     <script src="/index.tsx" type="module"></script>
